Fixed bug where JavaFX classes could not be found when path has spaces