@@ -444,7 +444,8 @@ public class FXClassLoader extends ClassLoaderHook {
 		@SuppressWarnings("deprecation")
 		URL[] urls = Stream.of(paths).map( Path::toFile).map( f -> {
 			try {
-				return f.toURL();
+				final URL url = f.toURL();
+				return new URL(url.toExternalForm().replace(" ", "%20")); //$NON-NLS-1$ //$NON-NLS-2$
 			} catch(Throwable t) {
 				return null;
 			}
